--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "qbs-cli",
   "version": "0.2.1",
-  "description": "qyer商业后台系统前端初始化工具",
+  "description": "qyer商业后台系统前端工具",
   "main": "index.js",
   "bin": {
     "qbs": "bin/qbs"
@@ -17,15 +17,9 @@
     "babel-preset-stage-2": "^6.5.0",
     "chalk": "^1.1.3",
     "commander": "^2.9.0",
-    "cz-conventional-changelog": "^1.2.0",
     "glob": "^7.0.6",
     "inquirer": "^1.1.3",
     "lodash": "^4.16.6",
-    "ora": "^0.3.0"
-  },
-  "config": {
-    "commitizen": {
-      "path": "./node_modules/cz-conventional-changelog"
-    }
+    "ora": "^0.3.0",
   }
 }
