--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "qbs-cli",
-  "version": "0.2.1",
+  "version": "1.1.3",
   "description": "qyer商业后台系统前端工具",
   "main": "index.js",
   "bin": {
@@ -20,6 +20,6 @@
     "glob": "^7.0.6",
     "inquirer": "^1.1.3",
     "lodash": "^4.16.6",
-    "ora": "^0.3.0",
+    "ora": "^0.3.0"
   }
 }
