--- a/framework/package.json
+++ b/framework/package.json
@@ -14,9 +14,9 @@
     "css-loader": "^0.23.1",
     "less": "^2.7.1",
     "less-loader": "^2.2.3",
-    "qbs-extensions": "git+ssh://git@git.2b6.me:qbs/qbs-extensions.git",
-    "qbs-utils": "git+ssh://git@git.2b6.me:qbs/qbs-utils.git",
-    "qbs-template": "git+ssh://git@git.2b6.me:qbs/qbs-template.git",
+    "vug-extensions": "git+https://github.com/bluers/vug-extensions.git",
+    "vug-utils": "git+https://github.com/bluers/vug-utils.git",
+    "vug-template": "git+https://github.com/bluers/vug-template.git",
     "script-loader": "^0.7.0",
     "style-loader": "^0.13.1",
     "vue": "^1.0.25",
