--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "qbs-cli",
+  "name": "vug-cli",
   "version": "1.1.3",
-  "description": "qyer商业后台系统前端工具",
+  "description": "vue多页工具",
   "main": "index.js",
   "bin": {
-    "qbs": "bin/qbs"
+    "vug": "bin/vug"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
