--- a/framework/package.json
+++ b/framework/package.json
@@ -19,12 +19,11 @@
     "vug-templates": "git+https://github.com/bluers/vug-templates.git",
     "script-loader": "^0.7.0",
     "style-loader": "^0.13.1",
-    "vue": "^2.0",
-    "vue-hot-reload-api": "^1.3.3",
-    "vue-html-loader": "^1.2.2",
-    "vue-loader": "^8.5.2",
-    "vue-style-loader": "^1.0.0",
-    "vue-validator": "^2.1.7"
+    "vue": "^2.1.10",
+    "vue-hot-reload-api": "^2.0.8",
+    "vue-loader": "^10.2.0",
+    "vue-html-loader": "^1.2.3",
+    "vue-style-loader": "^2.0.0"
   },
   "devDependencies": {
     "clean-webpack-plugin": "^0.1.10",
