--- a/framework/package.json
+++ b/framework/package.json
@@ -18,6 +18,7 @@
     "script-loader": "^0.7.0",
     "style-loader": "^0.13.1",
     "vue": "^2.1.10",
+    "vue-template-compiler": "^2.1.10",
     "vue-hot-reload-api": "^2.0.8",
     "vue-loader": "^10.2.0",
     "vue-html-loader": "^1.2.3",
