--- a/framework/package.json
+++ b/framework/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "qyer",
-  "version": "1.0.3",
+  "name": "vug framework",
+  "version": "1.2.1",
   "description": "",
   "main": "main.js",
   "author": "",
