--- a/framework/package.json
+++ b/framework/package.json
@@ -1,40 +1,43 @@
 {
   "name": "vug_framework",
+  "version": "1.2.5",
   "description": "",
   "main": "main.js",
   "author": "",
   "license": "ISC",
+  "scripts": {
+    "dev": "webpack-dev-server --port=9876",
+    "build": "rimraf dist && webpack -p"
+  },
   "dependencies": {
     "axios": "^0.18.0",
+    "babel-core": "^6.9.1",
+    "babel-loader": "^6.2.4",
+    "babel-plugin-transform-runtime": "^6.9.0",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-stage-0": "^6.5.0",
+    "css-loader": "^0.23.1",
+    "less": "^2.7.1",
+    "less-loader": "^2.2.3",
     "mint-ui": "^2.2.13",
-    "vue": "^2.5.2"
-  },
-  "devDependencies": {
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.5",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-runtime": "^6.26.0",
-    "clean-webpack-plugin": "^0.1.10",
-    "css-loader": "^1.0.0",
-    "file-loader": "^2.0.0",
-    "less": "^3.9.0",
-    "less-loader": "^4.1.0",
-    "open-browser-webpack-plugin": "0.0.5",
-    "require": "^2.4.20",
     "script-loader": "^0.7.0",
-    "style-loader": "^0.21.0",
-    "uglifyjs-webpack-plugin": "^2.1.3",
-    "url-loader": "^1.1.2",
+    "style-loader": "^0.13.1",
+    "vue": "^2.1.10",
     "vue-hot-reload-api": "^2.0.8",
     "vue-html-loader": "^1.2.3",
-    "vue-loader": "^14.2.4",
+    "vue-loader": "^10.2.0",
     "vue-style-loader": "^2.0.0",
-    "vue-template-compiler": "^2.5.2",
-    "vug-templates": "git+https://github.com/bluers/vug-templates.git",
-    "webpack": "^4.15.1",
-    "webpack-cli": "^3.3.2",
-    "webpack-dev-server": "^3.4.1"
+    "vue-template-compiler": "^2.1.10",
+    "vug-templates": "git+https://github.com/bluers/vug-templates.git"
+  },
+  "devDependencies": {
+    "babel-preset-env": "^1.7.0",
+    "clean-webpack-plugin": "^0.1.10",
+    "file-loader": "^2.0.0",
+    "open-browser-webpack-plugin": "0.0.2",
+    "require": "^2.4.20",
+    "url-loader": "^1.1.2",
+    "webpack": "^3.6.0",
+    "webpack-dev-server": "^2.9.1"
   }
 }
