--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "vug-cli",
-  "version": "1.2.6",
+  "version": "1.3.0",
+  "bundleid": "1",
   "description": "vue多页工具",
   "main": "index.js",
   "bin": {
